--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -14,7 +14,7 @@
     </div>
     <div class="row mt-64">
         <div class="center aligned column">
-            <div class="shadow-lg pb-4 feature-panel">
+            <div class="shadow-lg pb-4 feature-panel min-h-full">
                 <svg class="svg-icon w-32 h-32 text-gray-700">
                     <use xlink:href="{{ template_url }}/images/open-source-icon.svg#open_source"/>
                 </svg>                 
@@ -25,7 +25,7 @@
             </div>       
         </div>
         <div class="center aligned column">
-            <div class="shadow-lg pb-4 feature-panel">
+            <div class="shadow-lg pb-4 feature-panel min-h-full">
                 <svg class="svg-icon w-32 h-32 text-green-700">
                     <use xlink:href="{{ template_url }}/images/code-icon.svg#code_icon"/>
                 </svg> 
@@ -36,7 +36,7 @@
             </div> 
         </div>
         <div class="center aligned column">
-            <div class="shadow-lg pb-4 feature-panel">
+            <div class="shadow-lg pb-4 feature-panel min-h-full">
                 <svg class="svg-icon w-32 h-32 text-red-700">
                     <use xlink:href="{{ template_url }}/images/lock-icon.svg#lock_icon" />
                 </svg>   
@@ -47,7 +47,7 @@
             </div>           
         </div>
         <div class="center aligned column">
-            <div class="shadow-lg pb-4 feature-panel">                
+            <div class="shadow-lg pb-4 feature-panel min-h-full">                
                 <svg class="svg-icon w-32 h-32 text-blue-800">
                     <use xlink:href="{{ template_url }}/images/group-icon.svg#group_icon" />
                 </svg>                
