--- a/pages/page-not-found/page-not-found.html
+++ b/pages/page-not-found/page-not-found.html
@@ -1,7 +1,7 @@
 {% component 'members-site>layout.page' %}
-<div class="flex h-full w-full justify-center">
+<div class="flex h-full w-full justify-center mt-64">
     <div class="flex-shrink-0 self-center w-1/2">
-        <div class="ui raised inverted segment h-20">                
+        <div class="ui raised segment h-20">                
             <h3 class="mt-2 pt-2">
                 <i class="icon orange warning large sign"></i>
                 {{ message }}
