--- a/pages/user/change-password/change-password.html
+++ b/pages/user/change-password/change-password.html
@@ -1,5 +1,8 @@
-<div class="ui middle aligned centered sixteen wide column doubling equal height grid mt-20" id="page_content">    
-    <div class="ui three wide computer eight wide tablet column mt-64">        
+{% component 'members-site>layout.page' %}
+{% set active = 'change-password' %}
+<div class="flex pt-64 w-full justify-center" id="login_box">
+    <div class="flex-shrink-0 self-center w-74">
         {{ component('users>users.change-password',{ token: token }) }}
-    </div>
+    </div>        
 </div>
+{% endcomponent %}
