--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -1,4 +1,4 @@
-{% component 'members-site>layout.page' %}
+{% component 'members>layout.page' %}
 {% set active = 'home' %}
 <div class="ui centered equal width grid">
     <div class="row mt-64">
