--- a/pages/privacy/privacy.html
+++ b/pages/privacy/privacy.html
@@ -1,5 +1,5 @@
-{% component 'members-site>layout.page' %}
-    {{ component('members-site>title',{ title: title }) }}
+{% component 'members>layout.page' %}
+    {{ component('members>title',{ title: title }) }}
     {{  component('components:policy.privacy',{ 
             show_title: false,
             item_text_class: 'text-lg taxt-black',
