--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -1,6 +1,6 @@
-{% component 'members-site>layout.page' %}
+{% component 'members>layout.page' %}
     {% set active = 'about' %}
-    {{ component('members-site>title',{ title: title }) }}
+    {{ component('members>title',{ title: title }) }}
 
     <h4>Members Site Script</h4>
 
