--- a/pages/page-not-found/page-not-found.html
+++ b/pages/page-not-found/page-not-found.html
@@ -1,4 +1,4 @@
-{% component 'members-site>layout.page' %}
+{% component 'members>layout.page' %}
 <div class="flex h-full w-full justify-center mt-64">
     <div class="flex-shrink-0 self-center w-1/2">
         <div class="ui raised segment h-20">                
