--- a/pages/user/email-confirm/email-confirm.html
+++ b/pages/user/email-confirm/email-confirm.html
@@ -1,4 +1,4 @@
-{% component 'members-site>layout.page' %}
+{% component 'members>layout.page' %}
 {% set active = 'email-confirm' %}
 <div class="flex pt-64 w-full justify-center">
     <div class="flex-shrink-0 self-center w-74">
