--- a/pages/user/login/login.html
+++ b/pages/user/login/login.html
@@ -1,4 +1,4 @@
-{% component 'members-site>layout.page' %}
+{% component 'members>layout.page' %}
 {% set active = 'login' %}
 <div class="flex pt-64 w-full justify-center" id="login_box">
     <div class="flex-shrink-0 self-center w-74">
