--- a/pages/user/logout/logout.html
+++ b/pages/user/logout/logout.html
@@ -1,4 +1,4 @@
-{% component 'members-site>layout.page' %}
+{% component 'members>layout.page' %}
 <div class="flex pt-64 w-full justify-center">
     <div class="flex-shrink-0 self-center w-74">
     {{ component('users>users.logout') }}
