--- a/pages/user/profile/profile.html
+++ b/pages/user/profile/profile.html
@@ -1,4 +1,4 @@
-{% component 'members-site>layout.page' %}
+{% component 'members>layout.page' %}
 <div class="ui centered grid">   
     <div class="seven wide column mt-64">                 
         {{ component('users>users.profile',{ class:'raised h-full', user: user, user_details: details }) }}           
