--- a/pages/user/signup/signup.html
+++ b/pages/user/signup/signup.html
@@ -1,4 +1,4 @@
-{% component 'members-site>layout.page' %}
+{% component 'members>layout.page' %}
 {% set active = 'signup' %}
 <div class="ui centered grid"> 
     <div class="seven wide column mt-64">         
