--- a/pages/user/user.html
+++ b/pages/user/user.html
@@ -1,4 +1,4 @@
-{% component 'members-site>layout.page' %}     
+{% component 'members>layout.page' %}     
     {% set user = access().getUser() %}
     <div class="ui grid">
         <div class="three wide computer column only">
