--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -16,7 +16,7 @@
         <div class="center aligned column">
             <div class="shadow-lg pb-4 feature-panel min-h-full">
                 <svg class="svg-icon w-32 h-32 text-gray-700">
-                    <use xlink:href="{{ template_url }}/images/open-source-icon.svg#open_source"/>
+                    <use xlink:href="{{ template_url }}/images/icons/open-source-icon.svg#open_source"/>
                 </svg>                 
                 <div class="feature-title">{{ labels.open }}</div>   
                 <p class="mt-2 p-1 feature-description">
@@ -27,7 +27,7 @@
         <div class="center aligned column">
             <div class="shadow-lg pb-4 feature-panel min-h-full">
                 <svg class="svg-icon w-32 h-32 text-green-700">
-                    <use xlink:href="{{ template_url }}/images/code-icon.svg#code_icon"/>
+                    <use xlink:href="{{ template_url }}/images/icons/code-icon.svg#code_icon"/>
                 </svg> 
                 <div class="feature-title">{{ labels.code }}</div>   
                 <p class="mt-2 p-1 feature-description">
@@ -38,7 +38,7 @@
         <div class="center aligned column">
             <div class="shadow-lg pb-4 feature-panel min-h-full">
                 <svg class="svg-icon w-32 h-32 text-red-700">
-                    <use xlink:href="{{ template_url }}/images/lock-icon.svg#lock_icon" />
+                    <use xlink:href="{{ template_url }}/images/icons/lock-icon.svg#lock_icon" />
                 </svg>   
                 <div class="feature-title">{{ labels.permission }}</div>   
                 <p class="mt-2 p-1 feature-description">
@@ -49,7 +49,7 @@
         <div class="center aligned column">
             <div class="shadow-lg pb-4 feature-panel min-h-full">                
                 <svg class="svg-icon w-32 h-32 text-blue-800">
-                    <use xlink:href="{{ template_url }}/images/group-icon.svg#group_icon" />
+                    <use xlink:href="{{ template_url }}/images/icons/group-icon.svg#group_icon" />
                 </svg>                
                 <div class="feature-title">{{ labels.users }}</div>   
                 <p class="mt-2 p-1 feature-description">                  
